Реализовать алгоритм SwingingDoor

--- a/SwingingDoor.ipynb
+++ b/SwingingDoor.ipynb
@@ -37,85 +37,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def swinging_door(data, deviation=.1, mode=False, step=10):\n",
-    "    current_step = 0\n",
-    "    upper_pivot = lower_pivot = current = (0., 0.)\n",
+    "def _sloping_calc(stretch, deviation):\n",
+    "    current, entrance = stretch\n",
     "\n",
-    "    sloping_upper_max = sloping_lower_min = 0.\n",
+    "    _divide = current[0] - entrance[0]\n",
     "\n",
-    "    for i, item in enumerate(data):\n",
-    "        if not i:\n",
-    "            entrance = current = item\n",
+    "    try:\n",
+    "        upper = (current[1] - (entrance[1] + deviation)) / _divide\n",
+    "        lower = (current[1] - (entrance[1] - deviation)) / _divide\n",
     "\n",
-    "            upper_pivot = (entrance[0], entrance[1] + deviation)\n",
-    "            lower_pivot = (entrance[0], entrance[1] - deviation)\n",
+    "    except ZeroDivisionError as err:\n",
+    "        raise ValueError from err\n",
     "\n",
-    "            yield entrance\n",
+    "    return upper, lower\n",
     "\n",
-    "            current_step = 0\n",
-    "            continue\n",
     "\n",
-    "        past, current = current, item\n",
+    "def _new_corridor(stretch, deviation, upper=True):\n",
+    "    past, current = stretch\n",
     "\n",
-    "        sloping_upper = (current[1] - upper_pivot[1]) / (current[0] - upper_pivot[0])\n",
-    "        sloping_lower = (current[1] - lower_pivot[1]) / (current[0] - lower_pivot[0])\n",
+    "    entrance = (\n",
+    "        (past[0] + current[0]) / 2,\n",
+    "        (\n",
+    "            (past[1] + current[1]) / 2 - (deviation / 2)\n",
+    "            if upper\n",
+    "            else (past[1] + current[1]) / 2 + (deviation / 2)\n",
+    "        ),\n",
+    "    )\n",
     "\n",
-    "        if not sloping_upper_max and not sloping_lower_min:\n",
-    "            sloping_upper_max = sloping_upper\n",
-    "            sloping_lower_min = sloping_lower\n",
+    "    return entrance, _sloping_calc((current, entrance), deviation)\n",
     "\n",
-    "            current_step += 1\n",
-    "            continue\n",
     "\n",
-    "        if sloping_upper > sloping_upper_max:\n",
-    "            sloping_upper_max = sloping_upper\n",
+    "def swinging_door(source, deviation=0.1):\n",
+    "    if not deviation:\n",
+    "        yield from source\n",
+    "        return\n",
     "\n",
-    "            if sloping_upper_max > sloping_lower_min:\n",
-    "                entrance = past if mode else ((past[0] + current[0]) / 2, (past[1] + current[1]) / 2 - (deviation / 2))\n",
+    "    try:\n",
+    "        entrance = next(source)\n",
     "\n",
-    "                yield entrance\n",
+    "    except StopIteration:\n",
+    "        return\n",
     "\n",
-    "                current_step = 0\n",
+    "    yield entrance\n",
     "\n",
-    "                upper_pivot = entrance[0], entrance[1] + deviation\n",
-    "                lower_pivot = entrance[0], entrance[1] - deviation\n",
+    "    try:\n",
+    "        current = next(source)\n",
     "\n",
-    "                sloping_upper_max = (current[1] - upper_pivot[1]) / (current[0] - upper_pivot[0])\n",
-    "                sloping_lower_min = (current[1] - lower_pivot[1]) / (current[0] - lower_pivot[0])\n",
+    "    except StopIteration:\n",
+    "        return\n",
     "\n",
-    "        elif sloping_lower < sloping_lower_min:\n",
-    "            sloping_lower_min = sloping_lower\n",
+    "    sloping_upper, sloping_lower = _sloping_calc(\n",
+    "        (current, entrance), deviation\n",
+    "    )\n",
     "\n",
-    "            if sloping_upper_max > sloping_lower_min:\n",
-    "                entrance = past if mode else ((past[0] + current[0]) / 2, (past[1] + current[1]) / 2 - (deviation / 2))\n",
+    "    sloping_upper_max = sloping_upper\n",
+    "    sloping_lower_min = sloping_lower\n",
     "\n",
-    "                yield entrance\n",
+    "    try:\n",
+    "        while True:\n",
+    "            past = current\n",
+    "            current = next(source)\n",
     "\n",
-    "                current_step = 0\n",
+    "            sloping_upper, sloping_lower = _sloping_calc(\n",
+    "                (current, entrance), deviation\n",
+    "            )\n",
     "\n",
-    "                upper_pivot = entrance[0], entrance[1] + deviation\n",
-    "                lower_pivot = entrance[0], entrance[1] - deviation\n",
+    "            if sloping_upper > sloping_upper_max:\n",
+    "                sloping_upper_max = sloping_upper\n",
     "\n",
-    "                sloping_upper_max = (current[1] - upper_pivot[1]) / (current[0] - upper_pivot[0])\n",
-    "                sloping_lower_min = (current[1] - lower_pivot[1]) / (current[0] - lower_pivot[0])\n",
+    "                if sloping_upper_max > sloping_lower_min:\n",
+    "                    entrance, (\n",
+    "                        sloping_upper_max,\n",
+    "                        sloping_lower_min,\n",
+    "                    ) = _new_corridor((past, current), deviation)\n",
     "\n",
-    "        if mode and current_step == step:\n",
-    "            entrance = past\n",
+    "                    yield entrance\n",
     "\n",
-    "            yield entrance\n",
+    "            elif sloping_lower < sloping_lower_min:\n",
+    "                sloping_lower_min = sloping_lower\n",
     "\n",
-    "            current_step = 0\n",
+    "                if sloping_upper_max > sloping_lower_min:\n",
+    "                    entrance, (\n",
+    "                        sloping_upper_max,\n",
+    "                        sloping_lower_min,\n",
+    "                    ) = _new_corridor((past, current), deviation, upper=False)\n",
     "\n",
-    "            upper_pivot = entrance[0], entrance[1] + deviation\n",
-    "            lower_pivot = entrance[0], entrance[1] - deviation\n",
+    "                    yield entrance\n",
     "\n",
-    "            sloping_upper_max = (current[1] - upper_pivot[1]) / (current[0] - upper_pivot[0])\n",
-    "            sloping_lower_min = (current[1] - lower_pivot[1]) / (current[0] - lower_pivot[0])\n",
-    "\n",
-    "        else:\n",
-    "            current_step += 1\n",
-    "\n",
-    "    yield current\n"
+    "    except StopIteration:\n",
+    "        yield past"
    ]
   },
   {
@@ -131,25 +141,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert list(swinging_door([\n",
-    "    (0., 5.0), (1., 5.5), (2., 4.2),\n",
-    "    (3., 5.8), (4., 5.2), (5., 2.8),\n",
-    "], deviation=1.)) == [(0.0, 5.0), (4.5, 3.5), (5.0, 2.8)]\n",
-    "\n",
-    "assert list(swinging_door([\n",
-    "    (0., 5.0), (1., 5.5), (2., 4.2),\n",
-    "    (3., 5.8), (4., 5.2), (5., 6.8),\n",
-    "], deviation=1.)) == [(0.0, 5.0), (4.5, 5.5), (5.0, 6.8)]\n",
-    "\n",
-    "assert list(swinging_door([\n",
-    "    (0., 5.0), (1., 5.5), (2., 4.2),\n",
-    "    (3., 5.8), (4., 5.2), (5., 6.8),\n",
-    "], deviation=1., mode=True)) == [(0.0, 5.0), (4.0, 5.2), (5.0, 6.8)]\n",
-    "\n",
-    "assert list(swinging_door([\n",
-    "    (0., 5.0), (1., 5.5), (2., 4.2),\n",
-    "    (3., 5.8), (4., 5.2), (5., 6.8),\n",
-    "], deviation=1., mode=True, step=2)) == [(0.0, 5.0), (2.0, 4.2), (5.0, 6.8)]"
+    "assert list(swinging_door(iter([\n",
+    "    (1, 6), (2, 6.5), (3, 5.5),\n",
+    "    (4, 6.5), (5, 8), (6, 7.5),\n",
+    "    (7, 8), (8, 9.5),\n",
+    "]), 1)) == [(1, 6), (7.5, 8.25), (8, 9.5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert list(swinging_door(iter([\n",
+    "    (1, 6), (2, 6.5), (3, 5.5),\n",
+    "    (4, 6.5), (5, 8), (6, 7.5),\n",
+    "    (7, 8), (8, 6),\n",
+    "]), 1)) == [(1, 6), (7.5, 7.5), (8, 6)]"
    ]
   },
   {
@@ -161,44 +170,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e38dcc5b94094c76adb05d6efebd6192",
+       "model_id": "a864351b369b494a9d84bf36d4fd06e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='deviation', max=10.0, min=0.01, step=0.01), IntSlide…"
+       "interactive(children=(FloatSlider(value=1.0, description='deviation', max=2.0, min=0.01, step=0.01), Output())…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.re_show(deviation, step, modernized)>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from matplotlib.pyplot import plot, show\n",
-    "from ipywidgets import FloatSlider, Checkbox, IntSlider, interact\n",
+    "from ipywidgets import FloatSlider, interact\n",
     "\n",
     "my_data = [\n",
     "    (0., 5.0), (1., 5.5), (2., 4.2),\n",
     "    (3., 5.8), (4., 5.2), (5., 6.8),\n",
     "]\n",
     "\n",
-    "def re_show(deviation, step, modernized):\n",
+    "def re_show(deviation):\n",
     "    o_data = list()\n",
     "    o_index = list()\n",
     "    \n",
@@ -209,7 +208,7 @@
     "    n_data = list()\n",
     "    n_index = list()\n",
     "\n",
-    "    for x, y in swinging_door(my_data, deviation, mode=modernized, step=step):\n",
+    "    for x, y in swinging_door(iter(my_data), deviation):\n",
     "        print(x, y)\n",
     "        n_data.append(y)\n",
     "        n_index.append(x)\n",
@@ -221,10 +220,8 @@
     "    \n",
     "interact(\n",
     "    re_show,\n",
-    "    deviation=FloatSlider(min=.01, max=10, step=.01, value=1),\n",
-    "    step=IntSlider(min=1, max=100, step=1, value=2),\n",
-    "    modernized=Checkbox(value=False, description=\"Modernized\", disabled=False)\n",
-    ")"
+    "    deviation=FloatSlider(min=.01, max=2, step=.01, value=1)\n",
+    ");"
    ]
   },
   {
@@ -250,32 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70a54a8f5c7441249c909df61a5af78c",
+       "model_id": "53568153af444705b33be4c79c6eaf04",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='deviation', max=10.0, min=0.01, step=0.01), IntSlide…"
+       "interactive(children=(FloatSlider(value=1.0, description='deviation', max=10.0, min=0.01, step=0.01), Output()…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.re_show(deviation, step, modernized)>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -283,18 +270,18 @@
     "\n",
     "from pandas import read_csv\n",
     "from matplotlib.pyplot import figure, show\n",
-    "from ipywidgets import FloatSlider, Checkbox, IntSlider, interact\n",
+    "from ipywidgets import FloatSlider, interact\n",
     "\n",
     "from swinging_door import swinging_door\n",
     "\n",
     "data = [\n",
     "    (datetime.strptime(date, \"%Y-%m-%d\").timestamp(), value)\n",
     "    for date, value in read_csv(\n",
-    "        \"https://datahub.io/core/oil-prices/r/wti-daily.csv\"\n",
+    "        \"https://raw.githubusercontent.com/datasets/oil-prices/refs/heads/main/data/wti-daily.csv\"\n",
     "    ).values.tolist()\n",
     "]\n",
     "\n",
-    "def re_show(deviation, step, modernized):\n",
+    "def re_show(deviation):\n",
     "    x = list()\n",
     "    y = list()\n",
     "    \n",
@@ -306,7 +293,7 @@
     "    s_y = list()\n",
     "\n",
     "    s_data = list(\n",
-    "        swinging_door(data, deviation, mode=modernized, step=step)\n",
+    "        swinging_door(iter(data), deviation)\n",
     "    )\n",
     "\n",
     "    for k, v in s_data:\n",
@@ -333,10 +320,8 @@
     "    \n",
     "interact(\n",
     "    re_show,\n",
-    "    deviation=FloatSlider(min=.01, max=10, step=.01, value=1),\n",
-    "    step=IntSlider(min=1, max=100, step=1, value=10),\n",
-    "    modernized=Checkbox(value=False, description=\"Modernized\", disabled=False)\n",
-    ")"
+    "    deviation=FloatSlider(min=.01, max=10, step=.01, value=1)\n",
+    ");"
    ]
   }
  ],
@@ -356,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
